CSS/stylesheet.css
.herName {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;

  transform: translate(-50%, -50%);
}

.empower {
  text-align: center;
  padding: 1em;
}

.uploads {
  font-family: "Asap", sans-serif;
  text-align: center;
  padding: 0.5em;
}

body {
  padding: 0;
  margin: 0;
  background: #faf3dd;

  font-family: "Asap", sans-serif;
}

.main_headers {
  font-size: 10em;
  color: #ffa69e;
}
.subtitle {
  font-size: 3em;
  color: #5e6472;
  line-height: 1.1em;
}

.sec_headers {
  font-size: 5em;
  color: #ffa69e;
}

.normal_txt {
  font-size: 1.9em;
  color: #5e6472;
}

.home_page {
  padding: 31em;
}

.results_page {
  text-align: center;
}

.upload_image {
  font-family: "Asap", sans-serif;
  padding: 5em;
}

.upload_text {
  font-size: 40px;
  font-family: "Asap", sans-serif;
  position: fixed;
}

input[type="file"] {
  color: green;
  padding: 5em 15em;
}

.picture_result {
  width: 300px;
  height: 200px;
  font-weight: lighter;
  font-family: "asap", sans-serif;
}

.results_description {
  text-align: left;
  font-family: "asap", sans-serif;
  font-weight: normal;
}

input[type="submit"] {
  width: 500px;
  color: blue;
  border: none;
  padding: 16px 32px;
  font-size: large;
  font-weight: bold;
  margin: 4px 2px;
  position: center;
  background-color: yellowgreen;
  font-family: "Times New Roman", Times, serif;
}

label {
  color: red;
  font-size: 16px;
}

.section {
  padding: 2rem 0 4rem;
}

